@@ -16,7 +16,8 @@
         <!-- - - - - - Encoding - - - - - -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!-- - - - - - Java - - - - - -->
-        <java.version>1.8</java.version>
+<!--        <java.version>1.8</java.version>-->
+        <java.version>17</java.version>
     </properties>
 
 
@@ -78,11 +79,19 @@
                     <executable>java</executable>
                     <arguments>
                         <argument>-Xms512m</argument>
+<!--                        <argument>-Xmx1024m</argument>-->
                         <argument>-Xmx512m</argument>
                         <argument>-XX:NewRatio=3</argument>
-                        <argument>-XX:+PrintGCTimeStamps</argument>
-                        <argument>-XX:+PrintGCDetails</argument>
+<!--                        <argument>-XX:+PrintGCTimeStamps</argument>-->
+<!--                        <argument>-XX:+PrintGCDetails</argument>-->
                         <argument>-Xloggc:gc.log</argument>
+<!--                        <argument>-XX:+UseSerialGC</argument>-->
+                        <argument>-XX:+UseParallelGC</argument>
+<!--                        <argument>-XX:+UnlockExperimentalVMOptions</argument>-->
+<!--                        <argument>-XX:+UseEpsilonGC</argument>-->
+<!--                        <argument>-XX:+UseG1GC</argument>-->
+<!--                        <argument>-XX:+UseConcMarkSweepGC</argument>-->
+<!--                        <argument>-XX:+UseZGC</argument>-->
                         <argument>-classpath</argument>
                         <classpath/>
                         <argument>com.edu.AppSimple</argument>
